Revision history for Gimp-Perl extension.

1.16
	- removed sethspin.pl & billboard, they are no longer maintained :(
        - *sigh* removed some debugging code.
        - new save-filter "dataurl" (more a joke, but it does work).

1.15  Fri Nov 19 19:12:16 CET 1999
	- added italian translations by Daniele Medri (madrid@kjws.com).
        - POINTS really are decipoints: correct xlfd_size to create
          larger (& more correct) fonts.
        - small api changes for 1.2.
        - (some) changes for the gimp api renaming.
        - added export capabilities to miff/avi.
        - fixed "dirty" identifier clash with <= 5.005_03 && PERL_POLLUTE.
        - updated seth's scripts.
        - improved avi hunk skipping and 24 bit handling.
        - realclean now also removes the Makefile (just to be sure)
	- only install pdl plug-ins when pdl is available.
        - gimp_directory is 1.1-only.
        - more warnings on people insisting on using broken perls.
        - renamed init_gtk to gtk_init, asdded gtk_init_hook function to
          work around the horrible initialization problems in Gtk.
        - goto &name is horribly broken somewhere. going back to eval _again_.

1.14  Mon Oct 11 03:23:13 CEST 1999
	- set the version of all modules explicitly (for the benefit of CPAN).
	- added examples/avi (avi load/save plug-in, uncompressed 24 bit).
	- possible fix for another installation horror problem.
        - fixed a longstanding bug (?): not every class had a DESTROY, so
          the AUTOLOAD tried to resolve DESTROY after gimp_close had been
          called.
        - did the DESTROY catch differently...
        - fixed the testsuite.
        - started to revamp the extra argument handling.
        - updated PDB Explorer a bit, still broken.
        - almost full i18n of gimp-perl. A de translation is available.
        - save_image was kinda broken for jpeg and gif at least.
        - implemented more robust DESTROY and Lib:: connection handling.