@@ -119,6 +119,7 @@ examples/avi
 examples/layerfuncs
 examples/bricks
 examples/dataurl
+examples/colorhtml
 pxgettext
 po/gimp-perl.pot
 po/de.po
